--- a/presentation.html
+++ b/presentation.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Presentation title</title>
+    <title>COVID-19</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Team name   Names of team members" />
-    <meta name="date" content="2022-10-19" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <meta name="author" content="Du Shi,Zhe Xue,Kunning Zhang,Zhaojun Meng,Wenhui Zhang" />
+    <meta name="date" content="2022-11-18" />
+    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -13,19 +13,16 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Presentation title
-]
-.subtitle[
-## Presentation subtitle (if any)
+# COVID-19
 ]
 .author[
-### Team name <br> Names of team members
+### Du Shi,Zhe Xue,Kunning Zhang,Zhaojun Meng,Wenhui Zhang
 ]
 .institute[
 ### University of Edinburgh
 ]
 .date[
-### 2022-10-19
+### 2022-11-18
 ]
 
 ---
