--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
     <title>COVID-19</title>
     <meta charset="utf-8" />
     <meta name="author" content="Du Shi,Zhe Xue,Kunning Zhang,Zhaojun Meng,Wenhui Zhang" />
-    <meta name="date" content="2022-11-18" />
+    <meta name="date" content="2022-11-20" />
     <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 ### University of Edinburgh
 ]
 .date[
-### 2022-11-18
+### 2022-11-20
 ]
 
 ---
@@ -45,15 +45,16 @@ https://www.kaggle.com/datasets/imdevskp/corona-virus-report?search=COVID-19+DAT
 
 class: inverse, center, middle
 
-# 
+# Origin
 
+Three years agp,a new coronavirus designated 2019-nCoV was first identified in Wuhan, the capital of China's Hubei province
+Transmission rate (rate of infection) appeared to escalate in mid-January 2020
+As of 30 January 2020, approximately 8,243 cases have been confirmed
 ---
+This is the trend of the confirmed number in 2020.
+&lt;img src="presentation_files/figure-html/unnamed-chunk-2-1.png" width="80%" /&gt;
 
-# Hello World
-
-- Click the `Knit` button to compile your presentation
-
-- Make sure to commit and push all resulting files to your GitHub repo
+From this graph,it is clear that COVID-19 began to spread in the world in April 2020.
 
 ---
 
@@ -125,7 +126,7 @@ print(ave)
 - goes here
 ]
 .pull-right[
-&lt;img src="presentation_files/figure-html/unnamed-chunk-2-1.png" width="100%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-3-1.png" width="100%" /&gt;
 ]
 
 ---
