--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
     <title>COVID-19</title>
     <meta charset="utf-8" />
     <meta name="author" content="Du Shi,Zhe Xue,Kunning Zhang,Zhaojun Meng,Wenhui Zhang" />
-    <meta name="date" content="2022-11-22" />
+    <meta name="date" content="2022-11-23" />
     <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 ### University of Edinburgh
 ]
 .date[
-### 2022-11-22
+### 2022-11-23
 ]
 
 ---
@@ -69,7 +69,7 @@ class: inverse, center, middle
 
 # Origin
 
-Three years agp,a new coronavirus designated 2019-nCoV was first identified in Wuhan, the capital of China's Hubei province
+Three years ago,a new coronavirus designated 2019-nCoV was first identified in Wuhan, the capital of China's Hubei province
 Transmission rate (rate of infection) appeared to escalate in mid-January 2020
 As of 30 January 2020, approximately 8,243 cases have been confirmed
 ---
@@ -78,13 +78,11 @@ class: inverse
 A totally trend of the confirmed number in 2020 is showed below.
 &lt;img src="presentation_files/figure-html/unnamed-chunk-3-1.png" width="80%" /&gt;
 
-From this graph,it is clear that COVID-19 began to spread in the world in the April of 2020.
+From this graph,it is clear that COVID-19 began to spread in the world in April of 2020.
 
 ---
 
 class: inverse, middle, center
-
-# Using xaringan
 
 ---
 
@@ -123,15 +121,6 @@ or text in two columns `\(^*\)`
 # Code
 
 
-```r
-# a boring analysis
-ave &lt;- mean(cars$dist)
-print(ave)
-```
-
-```
-## [1] 42.98
-```
 
 ---
 
