--- a/summary.html
+++ b/summary.html
@@ -358,8 +358,8 @@ display: none;
 </div>
 
 
-<div id="covid--19" class="section level1">
-<h1>COVID -19</h1>
+<div id="covid-19" class="section level1">
+<h1>COVID-19</h1>
 </div>
 <div id="summary" class="section level1">
 <h1>Summary</h1>
