--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
     <title>COVID-19</title>
     <meta charset="utf-8" />
     <meta name="author" content="Du Shi,Zhe Xue,Kunning Zhang,Zhaojun Meng,Wenhui Zhang" />
-    <meta name="date" content="2022-11-24" />
+    <meta name="date" content="2022-11-25" />
     <script src="libs/header-attrs-2.18/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 ### University of Edinburgh
 ]
 .date[
-### 2022-11-24
+### 2022-11-25
 ]
 
 ---
@@ -83,18 +83,13 @@ From this graph,it is clear that COVID-19 began to spread in the world in April 
 ---
 
 class: inverse, middle, center
+#1.
 
 ---
 
-# xaringan
+# Top 15 countries 
+&lt;img src="presentation_files/figure-html/unnamed-chunk-4-1.png" width="80%" /&gt;
 
-- The presentation is created using the `xaringan` package
-
-- Use `---` to separate slides and `--` for incremental builds
-
---
-
-- Like this
 
 ---
 
@@ -139,7 +134,7 @@ or text in two columns `\(^*\)`
 - goes here
 ]
 .pull-right[
-&lt;img src="presentation_files/figure-html/unnamed-chunk-4-1.png" width="100%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-5-1.png" width="100%" /&gt;
 ]
 
 ---
