--- a/presentation.html
+++ b/presentation.html
@@ -5,11 +5,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Du Shi,Zhe Xue,Kunning Zhang,Zhaojun Meng,Wenhui Zhang" />
     <meta name="date" content="2022-11-25" />
-<<<<<<< HEAD
     <script src="libs/header-attrs-2.16/header-attrs.js"></script>
-=======
-    <script src="libs/header-attrs-2.18/header-attrs.js"></script>
->>>>>>> f2d373e8f692bcd1d5e6472176d323d4b8d99341
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -65,8 +61,54 @@ class: inverse
 ## $ `New recovered`  &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,…
 ## $ `WHO Region`     &lt;chr&gt; "Eastern Mediterranean", "Europe", "Africa", "Europe"…
 ```
+---
+class: inverse
 
 
+
+```
+## Rows: 187
+## Columns: 15
+## $ `Country/Region`         &lt;chr&gt; "Afghanistan", "Albania", "Algeria", "Andorra…
+## $ Confirmed                &lt;dbl&gt; 36263, 4880, 27973, 907, 950, 86, 167416, 373…
+## $ Deaths                   &lt;dbl&gt; 1269, 144, 1163, 52, 41, 3, 3059, 711, 167, 7…
+## $ Recovered                &lt;dbl&gt; 25198, 2745, 18837, 803, 242, 65, 72575, 2666…
+## $ Active                   &lt;dbl&gt; 9796, 1991, 7973, 52, 667, 18, 91782, 10014, …
+## $ `New cases`              &lt;dbl&gt; 106, 117, 616, 10, 18, 4, 4890, 73, 368, 86, …
+## $ `New deaths`             &lt;dbl&gt; 10, 6, 8, 0, 1, 0, 120, 6, 6, 1, 6, 0, 1, 37,…
+## $ `New recovered`          &lt;dbl&gt; 18, 63, 749, 0, 0, 5, 2057, 187, 137, 37, 558…
+## $ `Deaths / 100 Cases`     &lt;dbl&gt; 3.50, 2.95, 4.16, 5.73, 4.32, 3.49, 1.83, 1.9…
+## $ `Recovered / 100 Cases`  &lt;dbl&gt; 69.49, 56.25, 67.34, 88.53, 25.47, 75.58, 43.…
+## $ `Deaths / 100 Recovered` &lt;dbl&gt; 5.04, 5.25, 6.17, 6.48, 16.94, 4.62, 4.21, 2.…
+## $ `Confirmed last week`    &lt;dbl&gt; 35526, 4171, 23691, 884, 749, 76, 130774, 349…
+## $ `1 week change`          &lt;dbl&gt; 737, 709, 4282, 23, 201, 10, 36642, 2409, 287…
+## $ `1 week % increase`      &lt;dbl&gt; 2.07, 17.00, 18.07, 2.60, 26.84, 13.16, 28.02…
+## $ `WHO Region`             &lt;chr&gt; "Eastern Mediterranean", "Europe", "Africa", …
+```
+---
+class: inverse
+
+
+
+
+```
+## Rows: 627,920
+## Columns: 14
+## $ UID            &lt;dbl&gt; 16, 316, 580, 63072001, 63072003, 63072005, 63072007, 6…
+## $ iso2           &lt;chr&gt; "AS", "GU", "MP", "PR", "PR", "PR", "PR", "PR", "PR", "…
+## $ iso3           &lt;chr&gt; "ASM", "GUM", "MNP", "PRI", "PRI", "PRI", "PRI", "PRI",…
+## $ code3          &lt;dbl&gt; 16, 316, 580, 630, 630, 630, 630, 630, 630, 630, 630, 6…
+## $ FIPS           &lt;dbl&gt; 60, 66, 69, 72001, 72003, 72005, 72007, 72009, 72011, 7…
+## $ Admin2         &lt;chr&gt; NA, NA, NA, "Adjuntas", "Aguada", "Aguadilla", "Aguas B…
+## $ Province_State &lt;chr&gt; "American Samoa", "Guam", "Northern Mariana Islands", "…
+## $ Country_Region &lt;chr&gt; "US", "US", "US", "US", "US", "US", "US", "US", "US", "…
+## $ Lat            &lt;dbl&gt; -14.27100, 13.44430, 15.09790, 18.18012, 18.36025, 18.4…
+## $ Long_          &lt;dbl&gt; -170.13200, 144.79370, 145.67390, -66.75437, -67.17513,…
+## $ Combined_Key   &lt;chr&gt; "American Samoa, US", "Guam, US", "Northern Mariana Isl…
+## $ Date           &lt;chr&gt; "1/22/20", "1/22/20", "1/22/20", "1/22/20", "1/22/20", …
+## $ Confirmed      &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0…
+## $ Deaths         &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0…
+```
 ---
 
 class: inverse, center, middle
@@ -80,7 +122,7 @@ As of 30 January 2020, approximately 8,243 cases have been confirmed
 class: inverse
 
 A totally trend of the confirmed number in 2020 is showed below.
-&lt;img src="presentation_files/figure-html/unnamed-chunk-3-1.png" width="80%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-5-1.png" width="80%" /&gt;
 
 From this graph,it is clear that COVID-19 began to spread in the world in April of 2020.
 
@@ -92,7 +134,7 @@ class: inverse, middle, center
 ---
 
 # Confirmed Cases Over Time
-&lt;img src="presentation_files/figure-html/unnamed-chunk-4-1.png" width="80%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-6-1.png" width="80%" /&gt;
 
 
 ---
@@ -138,7 +180,7 @@ or text in two columns `\(^*\)`
 - goes here
 ]
 .pull-right[
-&lt;img src="presentation_files/figure-html/unnamed-chunk-5-1.png" width="100%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-7-1.png" width="100%" /&gt;
 ]
 
 ---
