--- a/presentation.html
+++ b/presentation.html
@@ -47,7 +47,7 @@ https://www.kaggle.com/datasets/rishanmascarenhas/covid19-temperatureoxygenpulse
 class: inverse
 
 
-#This is glimpse of our dataset
+#These are glimpses of our dataset
 
 ```
 ## Rows: 35,156
@@ -126,9 +126,9 @@ class: inverse
 
 class: inverse, center, middle
 #ORIGIN
-Three years ago,a new coronavirus designated 2019-nCoV was first identified in Wuhan, the capital of China's Hubei province
-Transmission rate (rate of infection) appeared to escalate in mid-January 2020
-As of 30 January 2020, approximately 8,243 cases have been confirmed
+Three years ago,a new coronavirus designated 2019-nCoV was first identified in Wuhan, the capital of China's Hubei province.
+Transmission rate (rate of infection) appeared to escalate in mid-January 2020.
+As of 30 January 2020, approximately 8,243 cases have been confirmed.
 ---
 class: inverse, middle, center
 #1.The country which was affected most.
