--- a/summary.html
+++ b/summary.html
@@ -393,8 +393,8 @@ Americas region took up more than a half.</p>
 region,especially USA. We will also use death and recovered variables to
 do some data visualization.</p>
 </div>
-<div id="predict-probability-of-covid-19-positive" class="section level2">
-<h2>Predict probability of COVID-19 positive</h2>
+<div id="predicting-the-probability-of-covid-19-positive" class="section level2">
+<h2>Predicting the probability of COVID-19 positive</h2>
 <p>For this question, We want to use Temperature, Oxygen and Pulse Rate
 readings to predict the probability of a person who had COVID-19
 positive. The data set contains 10,000 observations after removing NA,
@@ -411,14 +411,14 @@ because the Oxygen can keep blood in a high-energy state,through the
 lungs into the capillaries, has a certain role in human metabolism.)</p>
 <p>Slope - Oxygen: All else held constant, for every one percent
 increase in Oxygen, we would expect the probability of COVID-19 positive
-to be lower, on average, by 1.14948473 percent. Slope - Pulse Rate: All
-else held constant,the Pulse Rate increases by 1 beat per minute, we
-would expect the probability of COVID-19 positive to be higher, on
-average, by 0.01447323 percent. Slope - Temperature: All else held
-constant, for every one degree Fahrenheit increase in Temperature, we
-would expect the probability of COVID-19 positive to be higher, on
-average, by 0.72863310 percent. Intercept: Doesn’t make sense in
-context.</p>
+to be lower, on average, by 1.14948473 percent.</p>
+<p>Slope - Pulse Rate: All else held constant,the Pulse Rate increases
+by 1 beat per minute, we would expect the probability of COVID-19
+positive to be higher, on average, by 0.01447323 percent.</p>
+<p>Slope - Temperature: All else held constant, for every one degree
+Fahrenheit increase in Temperature, we would expect the probability of
+COVID-19 positive to be higher, on average, by 0.72863310 percent.</p>
+<p>Intercept: Doesn’t make sense in context.</p>
 </div>
 </div>
 
