--- a/presentation.html
+++ b/presentation.html
@@ -4,8 +4,8 @@
     <title>COVID-19</title>
     <meta charset="utf-8" />
     <meta name="author" content="Du Shi,Zhe Xue,Kunning Zhang,Wenhui Zhang,Zhaojun Meng" />
-    <meta name="date" content="2022-11-28" />
-    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
+    <meta name="date" content="2022-11-30" />
+    <script src="libs/header-attrs-2.18/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 ### University of Edinburgh
 ]
 .date[
-### 2022-11-28
+### 2022-11-30
 ]
 
 ---
@@ -132,27 +132,34 @@ As of 30 January 2020, approximately 8,243 cases have been confirmed.
 So we will talk about the situation of COVID-19 in 2020 and the physical condition of patients.
 ---
 class: inverse, middle, center
-#1.The country which was affected most.
+#1.World overview.
+
+Graphing the number of confirmed cases and deaths.This gives us a big picture of the past COVID-19 in 2020.
 ---
 class:inverse
 
-A totally trend of the confirmed number in 2020 is showed below.
+The totally trend of the confirmed cases and deaths number in 2020 is showed in following two graphs.
 &lt;img src="presentation_files/figure-html/unnamed-chunk-6-1.png" width="80%" /&gt;
 
-From this graph,it is clear that COVID-19 began to spread in the world in April of 2020 and Americas region isthe hardest-hit area.
-
-
 
 ---
 class:inverse
-Top 15 countries
 
-
+The totally trend of the confirmed cases number in 2020 is showed below.
 &lt;img src="presentation_files/figure-html/unnamed-chunk-7-1.png" width="80%" /&gt;
 
+---
+class:inverse
+Top 15 countries in the number of confirmed cases
 
+&lt;img src="presentation_files/figure-html/unnamed-chunk-8-1.png" width="80%" /&gt;
 
+---
+class:inverse
+Top 15 countries in the number of deaths
 
+&lt;img src="presentation_files/figure-html/unnamed-chunk-9-1.png" width="80%" /&gt;
+From all these graphs above,it is clear that COVID-19 began to spread in the world in April of 2020 and Americas region is the hardest-hit area in both deaths and confirmed number.
 ---
 class:inverse,middle,center
 
@@ -210,7 +217,7 @@ Intercept: Doesn't make sense in context.
 - goes here
 ]
 .pull-right[
-&lt;img src="presentation_files/figure-html/unnamed-chunk-9-1.png" width="100%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-11-1.png" width="100%" /&gt;
 ]
 
 ---
