--- a/summary.html
+++ b/summary.html
@@ -368,11 +368,15 @@ display: none;
 <p>Three years ago, a new kind of pneumonia named COVID-19 appeared in
 Wuhan, the capital of China’s Hubei province, and began to spread in the
 world. People who caught COVID-19 always have a high temperature or
-shivering and a continuous cough.</p>
-<p>To find the origin of COVID-19, we got the dataset from the Kaggle
-website. It contains the number of confirmed, death, recovered and
-active people from January to the end of July in 2020 in different
-region.</p>
+shivering and a continuous cough.Transmission rate appeared to escalate
+in mid-Tanuary 2020. As of 30 January 2020, approximately 8,243 cases
+have been confirmed. People who got COVID always have a fever and bad
+cough. Also,there are obvious changes in patients’ vital signs.</p>
+<p>To find more information of COVID-19, we got two dataset from the
+Kaggle website. COVID-19 DATASET contains the number of confirmed,
+death, recovered and active people from January to the end of July in
+2020 in different region. Covid-19 Temperature, Oxygen &amp; Pulse Rate
+readings contains three vital signs of 10000 patients.</p>
 </div>
 <div id="glimpse-of-data" class="section level2">
 <h2>GLIMPSE OF DATA</h2>
