--- a/presentation.html
+++ b/presentation.html
@@ -47,7 +47,7 @@ https://www.kaggle.com/datasets/rishanmascarenhas/covid19-temperatureoxygenpulse
 ---
 class: inverse
 
-#These are glimpses of our dataset
+#These are glimpses of our datasets
 
 
 ```
