--- a/summary.html
+++ b/summary.html
@@ -398,27 +398,33 @@ do some data visualization.</p>
 <p>For this question, We want to use Temperature, Oxygen and Pulse Rate
 readings to predict the probability of a person who had COVID-19
 positive. The data set contains 10,000 observations after removing NA,
-and we select some useful variables to predict.</p>
-<p>It should be noted that, the response variable and the explanatory
-variable are not linear, it has Non-constant variance and is usually
-fixable by transforming the response (y) variable,so we choose Logistic
-Regression Model.Then we get the probability of COVID-19 positive =
-exp(32.38560261 + (-1.14948473)<em>Oxygen + 0.01447323</em>Pulse Rate +
-0.72863310*Temperature),that means the probability of COVID-19 positive
-is proportional to temperature and Pulse Rate and inversely proportional
-to Oxygen.(The reason why it’s inversely proportional to Oxygen is
-because the Oxygen can keep blood in a high-energy state,through the
-lungs into the capillaries, has a certain role in human metabolism.)</p>
-<p>Slope - Oxygen: All else held constant, for every one percent
-increase in Oxygen, we would expect the probability of COVID-19 positive
-to be lower, on average, by 1.14948473 percent.</p>
+and we select some useful variables to predict.It should be noted that,
+result is binary categorical variable,so we choose Logistic Regression
+Model.Then we get the probability of COVID-19 positive =</p>
+<p>exp(32.4 + (-1.15) * Oxygen + 0.0145 * Pulse Rate + 0.729 *
+Temperature)
+____________________________________________________________</p>
+<p>(1+exp(32.4 + (-1.15) * Oxygen + 0.0145 * Pulse Rate + 0.729 *
+Temperature))</p>
+<p>and the probability of COVID-19 positive is proportional to
+temperature and Pulse Rate and inversely proportional to Oxygen.(The
+reason why it’s inversely proportional to Oxygen is because the Oxygen
+can keep blood in a high-energy state,through the lungs into the
+capillaries, has a certain role in human metabolism.)Below there are the
+meanings of slope and intercept: Slope - Oxygen: All else held constant,
+for every one percent increase in Oxygen, we would expect the
+probability of COVID-19 positive to be lower, on average, by 1.15
+percent.</p>
 <p>Slope - Pulse Rate: All else held constant,the Pulse Rate increases
-by 1 beat per minute, we would expect the probability of COVID-19
+by one beat per minute, we would expect the probability of COVID-19
 positive to be higher, on average, by 0.01447323 percent.</p>
 <p>Slope - Temperature: All else held constant, for every one degree
 Fahrenheit increase in Temperature, we would expect the probability of
 COVID-19 positive to be higher, on average, by 0.72863310 percent.</p>
 <p>Intercept: Doesn’t make sense in context.</p>
+<p>Then we make predictions for test data,plot the ROC curves,and
+calculate the areas under the ROC curves,and we find model performs
+better, because it has o.98 areas under the line,is close to 1.</p>
 </div>
 </div>
 
