--- a/presentation.html
+++ b/presentation.html
@@ -148,9 +148,26 @@ class:inverse,middle,center
 ---
 class:inverse
 
+
+
+
+
 ---
 class:inverse,middle,center
-#3.Predicting the probability of COVID-19 positive
+#3.
+
+
+
+---
+class:inverse
+
+
+
+
+
+---
+class:inverse,middle,center
+#4.Predicting the probability of COVID-19 positive
 
 ---
 class:inverse
@@ -212,6 +229,9 @@ class:inverse
 ```
 
 ---
+
+
+#Thanks！
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
