--- a/summary.html
+++ b/summary.html
@@ -297,23 +297,17 @@ overflow-y: auto;
 border: 1px solid #ddd;
 border-radius: 4px;
 }
-.tabset-dropdown > .nav-tabs > li.active:before {
-content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+content: "\e259";
 font-family: 'Glyphicons Halflings';
 display: inline-block;
 padding: 10px;
 border-right: 1px solid #ddd;
 }
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-content: "";
-border: none;
-}
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-content: "";
+content: "\e258";
 font-family: 'Glyphicons Halflings';
-display: inline-block;
-padding: 10px;
-border-right: 1px solid #ddd;
+border: none;
 }
 .tabset-dropdown > .nav-tabs > li.active {
 display: block;
@@ -378,22 +372,45 @@ death, recovered and active people from January to the end of July in
 2020 in different region. Covid-19 Temperature, Oxygen &amp; Pulse Rate
 readings contains three vital signs of 10000 patients.</p>
 </div>
-<div id="glimpse-of-data" class="section level2">
-<h2>GLIMPSE OF DATA</h2>
-<p>To begin with, we made a line plot of confirmed number in 2020 and
-use color to represent different region in the world, like Europe and
-Asia. This plot showed us a totally glimpse of the epidemic situation,
-so that we could find our direction of exploration. In first three
-months of 2020, COVID-19 did not seen as a serious disease, and majority
-of patients came from China. So it has not turn to a worldwide
-illness.</p>
-<p>In April, Americas region has recorded plenty of patients and became
-the hardest-hit area. Meanwhile, the number of patients in all the
-regions began to increase quickly.So far COVID-19 has become a big
-problem of the world.</p>
-<p>In July, there has been 16480485 confirmed in the world, however,
-Americas region took up more than a half.</p>
-<p>So in the following details, we would pay more attention to Americas
+<div id="world-overview" class="section level2">
+<h2>World overview</h2>
+<p>Firstly , we made two line graphs of confirmed cases and deaths over
+time, with colors representing different World Health Organization (WHO)
+regions of the world, such as Europe and Asia. These graphs give us a
+comprehensive understanding of the epidemic and let us find the
+direction of exploration.</p>
+<p>1.Confirmed case According to the graph “Number Of COVID-19 Cases
+Over Time”, in first three months of 2020, COVID-19 did not seen as a
+serious disease, and majority of patients came from Asia. After February
+12, the growth rate in Asia slowed down and the rate of increase leveled
+off. In April, Americas region has recorded plenty of patients and
+became the hardest-hit area—the cumulative number of confirmed cases
+surpassed that of Asia, of which the United States is the country with
+the largest number of confirmed cases in the world. Meanwhile,the
+epidemic situation in Europe worsened, and the number of confirmed cases
+increased rapidly. In July, there has been 16480485 confirmed in the
+world, however, Americas region took up more than a half. The increasing
+of the confirmed cases in other region has been flat.</p>
+<p>2.Deaths The overall development trend of global cumulative death
+cases can be divided into three stages (1) From January 20 to March 8,
+the slow growth period: the main feature of this period is that the
+number of new deaths in a single day does not exceed 100, and the
+cumulative number of deaths worldwide is dominated by Asia (mainly
+China). (2) From March 9th to March 24th, the rapid growth period: the
+main feature of this period is that the number of new deaths in a single
+day is greater than 200 but not more than 2,000. The death rate in
+Europe has increased significantly. The global death cases are mainly
+distributed in various regions dominated by Europe and Asia. (3) April
+15-August, continuous outbreak period: The main feature of this period
+is that the number of new deaths in a single day exceeds 5,000, and the
+current number of new deaths in a single day is as high as 15,000. The
+number of deaths in the Americas (mainly the United States) continued to
+rise at an alarming rate - surpassing Europe as the region with the
+highest number of deaths in a month.</p>
+<p>Then we plotted two graphs of the top 15 countries with the number of
+confirmed cases and deaths and found that Americas region is the
+hardest-hit area in both deaths and confirmed number as expected. So in
+the following details, we would pay more attention to Americas
 region,especially USA. We will also use death and recovered variables to
 do some data visualization.</p>
 </div>
