--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
     <title>COVID-19</title>
     <meta charset="utf-8" />
     <meta name="author" content="Du Shi,Zhe Xue,Kunning Zhang,Wenhui Zhang,Zhaojun Meng" />
-    <meta name="date" content="2022-11-30" />
+    <meta name="date" content="2022-12-01" />
     <script src="libs/header-attrs-2.18/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 ### University of Edinburgh
 ]
 .date[
-### 2022-11-30
+### 2022-12-01
 ]
 
 ---
@@ -71,7 +71,7 @@ class: inverse
 ```
 ## Rows: 187
 ## Columns: 15
-## $ `Country/Region`         &lt;chr&gt; "Afghanistan", "Albania", "Algeria", "Andorra…
+## $ region                   &lt;chr&gt; "Afghanistan", "Albania", "Algeria", "Andorra…
 ## $ Confirmed                &lt;dbl&gt; 36263, 4880, 27973, 907, 950, 86, 167416, 373…
 ## $ Deaths                   &lt;dbl&gt; 1269, 144, 1163, 52, 41, 3, 3059, 711, 167, 7…
 ## $ Recovered                &lt;dbl&gt; 25198, 2745, 18837, 803, 242, 65, 72575, 2666…
@@ -154,14 +154,15 @@ class:inverse
 
 ---
 class:inverse,middle,center
-#3.
+#3. The situation in US
+
 
 
 
 ---
 class:inverse
-
-
+In this part, we'll focus on the situation in USA. 
+&lt;img src="presentation_files/figure-html/unnamed-chunk-9-1.png" width="80%" /&gt;
 
 
 
@@ -215,7 +216,7 @@ class:inverse
 ---
 class:inverse
 #ROC curves
-&lt;img src="presentation_files/figure-html/unnamed-chunk-11-1.png" width="80%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-12-1.png" width="80%" /&gt;
 
 ---
 class:inverse
