--- a/presentation.html
+++ b/presentation.html
@@ -167,7 +167,7 @@ class:inverse
 
 ---
 class:inverse,middle,center
-#4.Predicting the probability of COVID-19 positive
+#4.Predicting positive results of COVID-19 
 
 ---
 class:inverse
@@ -184,7 +184,7 @@ class:inverse
 ## 4 Temperature   0.729    0.0254      28.6  2.30e-180
 ```
 
-The probability of COVID-19 positive = 
+The probability of positive = 
 
 exp(32.4 + (-1.15) * Oxygen +  0.0145	* Pulse Rate + 0.729 * Temperature)
 _______
@@ -229,7 +229,7 @@ class:inverse
 ```
 
 ---
-
+class:inverse
 
 #Thanks！
     </textarea>
