--- a/presentation.html
+++ b/presentation.html
@@ -178,6 +178,7 @@ So, it is clear that in the year of 2020, south America suffered from covid-19 t
 
 
 ---
+class:inverse
 &lt;img src="presentation_files/figure-html/unnamed-chunk-11-1.png" width="80%" /&gt;
 From the map we can find that there at 4 remarkable bright blue area represented by the top four population states in America, suggesting us that it is better to live in less populous area when meeting series Epidemic disease.
 ---
