--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
     <title>COVID-19</title>
     <meta charset="utf-8" />
     <meta name="author" content="Du Shi,Zhe Xue,Kunning Zhang,Wenhui Zhang,Zhaojun Meng" />
-    <meta name="date" content="2022-12-01" />
+    <meta name="date" content="2022-12-02" />
     <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 ### University of Edinburgh
 ]
 .date[
-### 2022-12-01
+### 2022-12-02
 ]
 
 ---
@@ -172,6 +172,7 @@ class:inverse,middle,center
 class:inverse
 In this part, we'll first look at the worldwide distribute.
 &lt;img src="presentation_files/figure-html/unnamed-chunk-10-1.png" width="80%" /&gt;
+
 So, it is clear that in the year of 2020, south America suffered from covid-19 the most, followed by southern Asia.
 
 
@@ -180,7 +181,8 @@ So, it is clear that in the year of 2020, south America suffered from covid-19 t
 ---
 class:inverse
 &lt;img src="presentation_files/figure-html/unnamed-chunk-11-1.png" width="80%" /&gt;
-From the map we can find that there at 4 remarkable bright blue area represented by the top four population states in America, suggesting us that it is better to live in less populous area when meeting series Epidemic disease.
+
+From the map we can find that there at 4 remarkable bright blue area represented by the top four most populous states in America, which are California, Texas, Florida, and New York separately.
 ---
 class:inverse,middle,center
 #4.Predicting positive results of COVID-19 
