--- a/summary.html
+++ b/summary.html
@@ -452,8 +452,8 @@ more populous area means more confirmed cases. That tells us if we meet
 another epidemic disease next time, it is better move to area less
 populous during epidemic periods.</p>
 </div>
-<div id="predicting-positive-results-of-covid-19" class="section level2">
-<h2>Predicting positive results of COVID-19</h2>
+<div id="predicting-the-probability-of-positive-results" class="section level2">
+<h2>Predicting the probability of positive results</h2>
 <p>For this question, We want to use Temperature, Oxygen and Pulse Rate
 readings to predict the probability of a person who had COVID-19
 positive. The data set contains 10,000 observations after removing NA,
@@ -481,7 +481,7 @@ Fahrenheit increase in Temperature, we would expect the probability of
 positive to be higher, on average, by 0.729 percent.</p>
 <p>Intercept: Doesn’t make sense in context.</p>
 <p>Then we make predictions for test data,plot the ROC curves,and
-calculate the areas under the ROC curves, we find model performs good,
+calculate the areas under the ROC curves, we find model performs well,
 because it has o.98 areas under the line,is close to 1.</p>
 </div>
 </div>
