--- a/presentation.html
+++ b/presentation.html
@@ -185,7 +185,7 @@ class:inverse
 From the map we can find that there at 4 remarkable bright blue area represented by the top four most populous states in America, which are California, Texas, Florida, and New York separately.
 ---
 class:inverse,middle,center
-#4.Predicting positive results of COVID-19 
+#4.Predicting the probability of positive results
 
 ---
 class:inverse
