--- a/presentation.html
+++ b/presentation.html
@@ -114,10 +114,9 @@ class: inverse
 
 class: inverse, center, middle
 #ORIGIN
-Three years ago,a new coronavirus designated 2019-nCoV was first identified in Wuhan, the capital of China's Hubei province.
+A new coronavirus designated 2019-nCoV was first identified in 2019.
 As of 30 January 2020, approximately 8,243 cases have been confirmed.
-People who got COVID always have a fever and bad cough.
-Also,there are obvious changes in patients' vital signs.
+There are obvious changes in patients' vital signs.
 ---
 class: inverse, middle, center
 #1.World overview.
@@ -148,30 +147,42 @@ Top 15 countries in the number of deaths
 &lt;img src="presentation_files/figure-html/unnamed-chunk-9-1.png" width="80%" /&gt;
 
 From all these graphs above,it is clear that COVID-19 began to spread in the world in April of 2020 and Americas region is the hardest-hit area in both deaths and confirmed number.
+
 ---
 class:inverse,middle,center
 
-#2.
+#2.Recovery rate of COVID-19 in different countries
+Recovery rates vary greatly from different country/Region
+---
+class:inverse
 
+The recovery rate of the COVID-19 in 2022 for all countries in the world with data
 
-
+&lt;img src="presentation_files/figure-html/unnamed-chunk-10-1.png" width="80%" /&gt;
 
 ---
 class:inverse
 
+Countries with low COVID-19 recovery rate
 
+&lt;img src="presentation_files/figure-html/unnamed-chunk-11-1.png" width="80%" /&gt;
+
+---
+class:inverse
+
+Countries with high COVID-19 recovery rate
+
+&lt;img src="presentation_files/figure-html/unnamed-chunk-12-1.png" width="80%" /&gt;
 
 ---
 class:inverse,middle,center
 #3. The map of covid distribution.
 
 
-
-
 ---
 class:inverse
 In this part, we'll first look at the worldwide distribute.
-&lt;img src="presentation_files/figure-html/unnamed-chunk-10-1.png" width="80%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-13-1.png" width="80%" /&gt;
 
 So, it is clear that in the year of 2020, south America suffered from covid-19 the most, followed by southern Asia.
 
@@ -180,7 +191,7 @@ So, it is clear that in the year of 2020, south America suffered from covid-19 t
 
 ---
 class:inverse
-&lt;img src="presentation_files/figure-html/unnamed-chunk-11-1.png" width="80%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-14-1.png" width="80%" /&gt;
 
 From the map we can find that there at 4 remarkable bright blue area represented by the top four most populous states in America, which are California, Texas, Florida, and New York separately.
 ---
@@ -233,7 +244,7 @@ class:inverse
 ---
 class:inverse
 #ROC curves
-&lt;img src="presentation_files/figure-html/unnamed-chunk-14-1.png" width="80%" /&gt;
+&lt;img src="presentation_files/figure-html/unnamed-chunk-17-1.png" width="80%" /&gt;
 
 ---
 class:inverse
